# qzxing

src/: CMakeLists.txt
src/zxing/zxing/: CMakeLists.txt
